# office2pdf-ts

./: .gitignore  .npmignore  .prettierignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml  publish.yml
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: installed-package-smoke.mjs
src/: cli.ts  index.ts  native.ts  options.ts
tests/: cli.test.ts  index.test.ts  real-conversion.test.ts
tests/helpers/: office-fixtures.ts
