[package]
name = "office2pdf-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bridge scaffold for office2pdf"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
office2pdf = { version = "0.6", features = ["wasm"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[features]
default = []
pdf-ops = ["office2pdf/pdf-ops"]
